# uss-oni.github.io

./: .gitignore  Cargo.toml  README.md  index.html  output.wasm  recipes.js  rustfmt.toml  style.css  uss.csproj  uss.js  uss.sln
db/: recipes.ts  uss.ts
docs/: index.html  style copy.css  style.css  translation.json
docs/db/: recipes.js  uss.js
docs/lang/: lang.js
docs/script/: img.js  main.js  properties.js  sort.js
html/script/: main.js  properties.js
images/Icon/: tempDown.png-autosave.kra  tempDown.png~  tempUp.png~
mod/: Building.cs  Category.cs  Component.cs  DB.cs  Dlc.cs  Element.cs  Entity.cs  Png.cs  Translation.cs  uss.cs
mod/Components/: Klei.AI.Modifiers.cs  PrimaryElement.cs  StateMachine.cs
mod/Recipe/: Adult.cs  Birth.cs  Building.cs  Complex.cs  Death.cs  Egg.cs  Fertilization.cs  Harvest.cs  IRecipe.cs  Irrigation.cs  Phase.cs  Rotting.cs  Seeds.cs  SublimateChunk.cs  SublimateLiquid.cs  SublimateSolid.cs
mod/StateMachine/: StatesMachines.cs
pkg/: package.json  uss_oni.d.ts  uss_oni.js  uss_oni_bg.wasm  uss_oni_bg.wasm.d.ts
rust/uss-oni/: Cargo.toml  index.html  style.css
src/: Building.cs  Category.cs  Component.cs  DB.cs  Dlc.cs  Element.cs  Entity.cs  Png.cs  Recipe.cs  category.rs  choice.rs  db.rs  dlc.rs  entity.rs  html.rs  icon.rs  lib.rs  menu.rs  msg.rs  node.rs  options.rs  route.rs  text.rs  text_node.rs  units.rs  uss.cs
src/Components/: Klei.AI.Modifiers.cs  Nope.cs  PrimaryElement.cs
src/Recipe/: Adult.cs  Birth.cs  Building.cs  Complex.cs  Death.cs  Egg.cs  Harvest.cs  (+10 more)
static/: uss_oni.js  uss_oni_bg.wasm
(+92 files in other folders)
