[package]
name = "uss-oni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "*"
slotmap = "1.0"

[dependencies.web-sys]
version = "*"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlDivElement',
  'HtmlImageElement',
  'HtmlParagraphElement',
  'HtmlHeadingElement',
  'HtmlSelectElement',
  'HtmlOptionElement',
  'Text',
  'DomTokenList',
  'NodeList',
  'DomStringMap',
  'CssStyleDeclaration',
  'Event',
  'EventTarget',
  'MouseEvent',
  'InputEvent',
  'HashChangeEvent',
  'History',
  'Node',
  'Window',
  'Location',
]

[profile.release]
#panic = "abort"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
